--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ project(bmssp)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 message(STATUS "CHECKING C++ VERSION: ${CMAKE_CXX_STANDARD}")
@@ -18,3 +17,7 @@ FetchContent_MakeAvailable(Catch2)
 
 add_executable(my_tests tests/tests.cpp)
 target_link_libraries(my_tests PRIVATE Catch2::Catch2WithMain)
+
+# for debugging
+# target_compile_options(my_tests PRIVATE -fsanitize=address -g)
+# target_link_options(my_tests PRIVATE -fsanitize=address)
