--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,10 @@
 name: CI Tests
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches: [ "master" ]
+  push:
+    branches: [ "master" ]
 
 jobs:
   build_and_test:
