--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,9 @@ jobs:
           sudo apt-get install cmake build-essential -y
           g++ --version
 
+      - name: Check If Imports are Self-contained
+        run: g++ -std=c++20 -O0 helpers/header_tester.cpp
+
       - name: Configure CMake
         run: cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
 
