--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ message(STATUS "CHECKING C++ VERSION: ${CMAKE_CXX_STANDARD}")
 
 add_executable(my_tests tests/tests.cpp)
 
-target_compile_options(my_tests PRIVATE  --max-errors=2)
-target_link_options(my_tests PRIVATE --max-errors=2)
+target_compile_options(my_tests PRIVATE  --max-errors=2 -fsanitize=address -g)
+target_link_options(my_tests PRIVATE --max-errors=2 -fsanitize=address -g)
