--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,5 @@ jobs:
         run: cmake --build ${{ github.workspace }}/build --config Release
 
       - name: Run Tests
-        run: ./my_tests
+        run: ./tests
         working-directory: ${{ github.workspace }}/build
