fix find pivots; one more test; better graph reading;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ message(STATUS "CHECKING C++ VERSION: ${CMAKE_CXX_STANDARD}")
 
 add_executable(tests tests/tests.cpp)
 
-target_compile_options(tests PRIVATE  --max-errors=2 -fsanitize=address -g)
-target_link_options(tests PRIVATE --max-errors=2 -fsanitize=address -g)
+target_compile_options(tests PRIVATE  --max-errors=2)
+target_link_options(tests PRIVATE --max-errors=2)
