--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
           g++ -std=c++20 -O0 tests/imports-tester-wc.cpp
 
       - name: Check If The README example is correct
-        run: g++ -std=c++20 -O0 helpers/readme.cpp
+        run: g++ -std=c++20 -O0 tests/readme.cpp
 
       # --- Header Generation ---
       - name: Set up Python
